--- a/wsm-dashboard/src/Component/Utils/CssFiles/card.css
+++ b/wsm-dashboard/src/Component/Utils/CssFiles/card.css
@@ -1,15 +1,25 @@
+.chartsContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 .chartsCard {
-  background-color: whitesmoke; /* Some color related to white */
+  background-color: whitesmoke;
   transition: box-shadow 0.3s, transform 0.3s;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-  margin-top: 1rem;
-  margin-right: 1rem;
-  margin-left: 1rem;
-  width: 50%;
+  margin: 0.3rem;
+  width: fit-content;
 }
+
 .chartsCard:hover {
   transform: scale(1.01);
   box-shadow: 0 20px 10px rgba(0, 0, 0, 0.1);
-  margin-right: 1rem;
-  margin-left: 1rem;
+}
+
+@media (max-width: 600px) {
+  .chartsCard {
+    width: 100%;
+    margin: 1rem 0;
+  }
 }
