--- a/wsm-dashboard/src/Component/Utils/CssFiles/data_display.css
+++ b/wsm-dashboard/src/Component/Utils/CssFiles/data_display.css
@@ -5,9 +5,7 @@
   padding: 10px;
   width: 15rem;
   height: 7rem;
-  margin-top: 0.5rem;
-  margin-right: 0.5rem;
-  margin-left: 0.5rem;
+  margin: 0.5rem;
   font-family: Roboto sans-serif;
 }
 .numberStyle {
